--- a/index.html
+++ b/index.html
@@ -2,24 +2,55 @@
 <html lang="fr">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
-        <link rel="stylesheet" href="./assets/style.css" />
+        <meta charset="UTF-8" />
+        <meta
+            name="description"
+            content="Photographe évènementielle à bordeaux, je capture vos concerts, vos mariages, vos évènements d'entreprises ou encore votre portrait."
+        />
+
+        <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
+        <link rel="stylesheet" href="./assets/style.min.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
             rel="stylesheet"
         />
-        <meta charset="UTF-8" />
+
+        <meta property="og:title" content="Nina Carducci, photographe évènementielle à Bordeaux" />
+        <meta property="og:description" content="Description concise du contenu ou du produit" />
+        <meta property="og:image" content="./assets/images/nina-min.webp" />
+        <meta property="og:url" content="https://pierre-alexandre-10.github.io/Nina-Carducci/" />
+        <meta property="og:type" content="website" />
+
+        <script type="application/ld+json">
+            {
+                "@context": "https://schema.org",
+                "@type": "ProfessionalService",
+                "name": "Nina Carducci",
+                "image": ".\assets\images\nina-min.webp",
+                "@id": "",
+                "url": "https://pierre-alexandre-10.github.io/Nina-Carducci/",
+                "telephone": "0556677889",
+                "priceRange": "50-400 €",
+                "address": {
+                    "@type": "PostalAddress",
+                    "streetAddress": "68 avenue Alsace-Lorraine",
+                    "addressLocality": "Bordeaux",
+                    "postalCode": "33200",
+                    "addressCountry": "FR"
+                },
+                "openingHoursSpecification": {
+                    "@type": "OpeningHoursSpecification",
+                    "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+                    "opens": "10:00",
+                    "closes": "19:00"
+                },
+                "sameAs": "https://www.instagram.com/ninacarducci.photo/?hl=fr"
+            }
+        </script>
+
         <title>Nina Carducci</title>
-        <script src="./assets/bootstrap/bootstrap.bundle.js"></script>
-        <script
-            src="https://code.jquery.com/jquery-3.4.1.min.js"
-            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-            crossorigin="anonymous"
-        ></script>
-        <script src="./assets/maugallery.js"></script>
-        <script src="./assets/scripts.js"></script>
     </head>
     <body>
         <header>
@@ -276,7 +307,7 @@
                     <div class="form-container">
                         <h2>Une question ? Une demande de devis ?</h2>
                         <p>N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
-                        <form action="" method="post">
+                        <form action="#" method="post">
                             <label for="nom">Nom</label>
                             <input type="text" name="nom" id="nom" />
                             <label for="email">Email</label>
@@ -295,5 +326,14 @@
                 </div>
             </div>
         </footer>
+
+        <script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
+        <script
+            src="https://code.jquery.com/jquery-3.4.1.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+            crossorigin="anonymous"
+        ></script>
+        <script src="./assets/maugallery.js"></script>
+        <script src="./assets/scripts.min.js"></script>
     </body>
 </html>
