--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 "@context": "https://schema.org",
                 "@type": "ProfessionalService",
                 "name": "Nina Carducci",
-                "image": ".\assets\images\nina-min.webp",
+                "image": "./assets/images/nina-min.webp",
                 "@id": "",
                 "url": "https://pierre-alexandre-10.github.io/Nina-Carducci/",
                 "telephone": "0556677889",
