ajustement des images

--- a/index.html
+++ b/index.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
+        <!-- BALISE META -->
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta charset="UTF-8" />
         <meta
             name="description"
             content="Photographe évènementielle à bordeaux, je capture vos concerts, vos mariages, vos évènements d'entreprises ou encore votre portrait."
         />
+        <meta property="og:title" content="Nina Carducci, photographe évènementielle à Bordeaux" />
+        <meta
+            property="og:description"
+            content="Photographe évènementielle à bordeaux, je capture vos concerts, vos mariages, vos évènements d'entreprises ou encore votre portrait."
+        />
+        <meta property="og:image" content="./assets/images/nina-min.webp" />
+        <meta property="og:url" content="https://pierre-alexandre-10.github.io/Nina-Carducci/" />
+        <meta property="og:type" content="website" />
 
-        <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
-        <link rel="stylesheet" href="./assets/style.min.css" />
+        <!-- BALISE LINK -->
+
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
             rel="stylesheet"
         />
+        <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
+        <link rel="stylesheet" href="./assets/style.min.css" />
 
-        <meta property="og:title" content="Nina Carducci, photographe évènementielle à Bordeaux" />
-        <meta property="og:description" content="Description concise du contenu ou du produit" />
-        <meta property="og:image" content="./assets/images/nina-min.webp" />
-        <meta property="og:url" content="https://pierre-alexandre-10.github.io/Nina-Carducci/" />
-        <meta property="og:type" content="website" />
+        <!-- BALISE SCRIPT -->
 
         <script type="application/ld+json">
             {
@@ -175,8 +183,6 @@
                             data-gallery-tag="Concert"
                             class="gallery-item"
                             src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
-                            width="440"
-                            height="440"
                             alt="Photo de concert - Aaron Paul"
                         />
                         <img
