--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <main>
             <div id="about">
                 <div class="picture left">
-                    <img src="./assets/images/nina-min.webp" alt="Photo de Nina Carducci" />
+                    <img src="./assets/images/nina.webp" alt="Photo de Nina Carducci" />
                 </div>
                 <div id="about-me">
                     <h2 class="about-me__title">A propos de moi</h2>
@@ -182,55 +182,55 @@
                         <img
                             data-gallery-tag="Concert"
                             class="gallery-item"
-                            src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
+                            src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash1.webp"
                             alt="Photo de concert - Aaron Paul"
                         />
                         <img
                             data-gallery-tag="Entreprises"
                             class="gallery-item"
-                            src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
+                            src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash1.webp"
                             alt="Photo d'entreprise - Ali Morshedlou"
                         />
                         <img
                             data-gallery-tag="Entreprises"
                             class="gallery-item"
-                            src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
+                            src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash1.webp"
                             alt="Photo d'entreprise - Jason Goodman"
                         />
                         <img
                             data-gallery-tag="Mariages"
                             class="gallery-item"
-                            src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
+                            src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash1.webp"
                             alt="Photo de mariage - Hannah Busing"
                         />
                         <img
                             data-gallery-tag="Portrait"
                             class="gallery-item"
-                            src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
+                            src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash1.webp"
                             alt="Photo portrait - Ade Tunji"
                         />
                         <img
                             data-gallery-tag="Mariages"
                             class="gallery-item"
-                            src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
+                            src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash1.webp"
                             alt="Photo de mariage - Jakob Owens"
                         />
                         <img
                             data-gallery-tag="Portrait"
                             class="gallery-item"
-                            src="./assets/images/gallery/portraits/nino-van-prattenburg-443cl1uR_8-unsplash.webp"
+                            src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash1.webp"
                             alt="Photo portrait - Nino Van Prattenburg"
                         />
                         <img
                             data-gallery-tag="Concert"
                             class="gallery-item"
-                            src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
+                            src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash1.webp"
                             alt="Photo de concert - Austin Neill"
                         />
                         <img
                             data-gallery-tag="Entreprises"
                             class="gallery-item"
-                            src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
+                            src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash1.webp"
                             alt="Photo d'entreprise - Mateus Campos Felipe"
                         />
                     </div>
@@ -324,10 +324,7 @@
                         </form>
                     </div>
                     <div class="picture right">
-                        <img
-                            src="./assets/images/camera-min.webp"
-                            alt="Photo d'un appareil photo"
-                        />
+                        <img src="./assets/images/camera.webp" alt="Photo d'un appareil photo" />
                     </div>
                 </div>
             </div>
