Ajustement position fichier css

--- a/index.html
+++ b/index.html
@@ -18,14 +18,19 @@
         <meta property="og:url" content="https://pierre-alexandre-10.github.io/Nina-Carducci/" />
         <meta property="og:type" content="website" />
 
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Nina Carducci" />
+        <meta
+            name="twitter:description"
+            content="Photographe évènementielle à bordeaux, je capture vos concerts, vos mariages, vos évènements d'entreprises ou encore votre portrait."
+        />
+        <meta name="twitter:image" content="./assets/images/nina-min.webp" />
+
         <!-- BALISE LINK -->
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-            rel="stylesheet"
-        />
+
         <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
         <link rel="stylesheet" href="./assets/style.min.css" />
 
@@ -338,5 +343,9 @@
         ></script>
         <script src="./assets/maugallery.js"></script>
         <script src="./assets/scripts.min.js"></script>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
+            rel="stylesheet"
+        />
     </body>
 </html>
