Ajout srcset carroussel

--- a/index.html
+++ b/index.html
@@ -118,6 +118,20 @@
                                 src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_1-min.webp"
                                 class="d-block w-100"
                                 alt="..."
+                                srcset="
+                                    ./assets/images/slider/575/ryoji-iwata-wUZjnOv7t0g-unsplash.webp   575w,
+                                    ./assets/images/slider/767/ryoji-iwata-wUZjnOv7t0g-unsplash.webp   767w,
+                                    ./assets/images/slider/991/ryoji-iwata-wUZjnOv7t0g-unsplash.webp   991w,
+                                    ./assets/images/slider/1200/ryoji-iwata-wUZjnOv7t0g-unsplash.webp 1200w,
+                                    ./assets/images/slider/1440/ryoji-iwata-wUZjnOv7t0g-unsplash.webp 1440w,
+                                    ./assets/images/slider/1920/ryoji-iwata-wUZjnOv7t0g-unsplash.webp 1920w
+                                "
+                                sizes="(max-width: 575px) 575px,
+                                       (max-width: 767px) 767px,
+                                       (max-width: 991px) 991px,
+                                       (max-width: 1200px) 1200px,
+                                       (max-width: 1440px) 1440px,
+                                       1920px"
                             />
                         </div>
                         <div class="carousel-item">
@@ -125,6 +139,20 @@
                                 src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_1-min.webp"
                                 class="d-block w-100"
                                 alt="..."
+                                srcset="
+                                    ./assets/images/slider/575/nicholas-green-nPz8akkUmDI-unsplash.webp   575w,
+                                    ./assets/images/slider/767/nicholas-green-nPz8akkUmDI-unsplash.webp   767w,
+                                    ./assets/images/slider/991/nicholas-green-nPz8akkUmDI-unsplash.webp   991w,
+                                    ./assets/images/slider/1200/nicholas-green-nPz8akkUmDI-unsplash.webp 1200w,
+                                    ./assets/images/slider/1440/nicholas-green-nPz8akkUmDI-unsplash.webp 1440w,
+                                    ./assets/images/slider/1920/nicholas-green-nPz8akkUmDI-unsplash.webp 1920w
+                                "
+                                sizes="(max-width: 575px) 575px,
+                                       (max-width: 767px) 767px,
+                                       (max-width: 991px) 991px,
+                                       (max-width: 1200px) 1200px,
+                                       (max-width: 1440px) 1440px,
+                                       1920px"
                             />
                         </div>
                         <div class="carousel-item">
@@ -132,6 +160,20 @@
                                 src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_1-min.webp"
                                 class="d-block w-100"
                                 alt="..."
+                                srcset="
+                                    ./assets/images/slider/575/edward-cisneros-3_h6-1NPDGw-unsplash.webp   575w,
+                                    ./assets/images/slider/767/edward-cisneros-3_h6-1NPDGw-unsplash.webp   767w,
+                                    ./assets/images/slider/991/edward-cisneros-3_h6-1NPDGw-unsplash.webp   991w,
+                                    ./assets/images/slider/1200/edward-cisneros-3_h6-1NPDGw-unsplash.webp 1200w,
+                                    ./assets/images/slider/1440/edward-cisneros-3_h6-1NPDGw-unsplash.webp 1440w,
+                                    ./assets/images/slider/1920/edward-cisneros-3_h6-1NPDGw-unsplash.webp 1920w
+                                "
+                                sizes="(max-width: 575px) 575px,
+                                       (max-width: 767px) 767px,
+                                       (max-width: 991px) 991px,
+                                       (max-width: 1200px) 1200px,
+                                       (max-width: 1440px) 1440px,
+                                       1920px"
                             />
                         </div>
                     </div>
@@ -189,18 +231,21 @@
                             class="gallery-item"
                             src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash1.webp"
                             alt="Photo de concert - Aaron Paul"
+                            loading="lazy"
                         />
                         <img
                             data-gallery-tag="Entreprises"
                             class="gallery-item"
                             src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash1.webp"
                             alt="Photo d'entreprise - Ali Morshedlou"
+                            loading="lazy"
                         />
                         <img
                             data-gallery-tag="Entreprises"
                             class="gallery-item"
                             src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash1.webp"
                             alt="Photo d'entreprise - Jason Goodman"
+                            loading="lazy"
                         />
                         <img
                             data-gallery-tag="Mariages"
@@ -213,30 +258,35 @@
                             class="gallery-item"
                             src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash1.webp"
                             alt="Photo portrait - Ade Tunji"
+                            loading="lazy"
                         />
                         <img
                             data-gallery-tag="Mariages"
                             class="gallery-item"
                             src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash1.webp"
                             alt="Photo de mariage - Jakob Owens"
+                            loading="lazy"
                         />
                         <img
                             data-gallery-tag="Portrait"
                             class="gallery-item"
                             src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash1.webp"
                             alt="Photo portrait - Nino Van Prattenburg"
+                            loading="lazy"
                         />
                         <img
                             data-gallery-tag="Concert"
                             class="gallery-item"
                             src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash1.webp"
                             alt="Photo de concert - Austin Neill"
+                            loading="lazy"
                         />
                         <img
                             data-gallery-tag="Entreprises"
                             class="gallery-item"
                             src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash1.webp"
                             alt="Photo d'entreprise - Mateus Campos Felipe"
+                            loading="lazy"
                         />
                     </div>
                 </div>
