Ajout loading lazy

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
         <link rel="stylesheet" href="./assets/style.min.css" />
 
@@ -118,6 +121,7 @@
                                 src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_1-min.webp"
                                 class="d-block w-100"
                                 alt="..."
+                                loading="lazy"
                                 srcset="
                                     ./assets/images/slider/575/ryoji-iwata-wUZjnOv7t0g-unsplash.webp   575w,
                                     ./assets/images/slider/767/ryoji-iwata-wUZjnOv7t0g-unsplash.webp   767w,
@@ -139,6 +143,7 @@
                                 src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_1-min.webp"
                                 class="d-block w-100"
                                 alt="..."
+                                loading="lazy"
                                 srcset="
                                     ./assets/images/slider/575/nicholas-green-nPz8akkUmDI-unsplash.webp   575w,
                                     ./assets/images/slider/767/nicholas-green-nPz8akkUmDI-unsplash.webp   767w,
@@ -160,6 +165,7 @@
                                 src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_1-min.webp"
                                 class="d-block w-100"
                                 alt="..."
+                                loading="lazy"
                                 srcset="
                                     ./assets/images/slider/575/edward-cisneros-3_h6-1NPDGw-unsplash.webp   575w,
                                     ./assets/images/slider/767/edward-cisneros-3_h6-1NPDGw-unsplash.webp   767w,
@@ -393,9 +399,5 @@
         ></script>
         <script src="./assets/maugallery.js"></script>
         <script src="./assets/scripts.min.js"></script>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-            rel="stylesheet"
-        />
     </body>
 </html>
