--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
                                     ./assets/images/slider/575/ryoji-iwata-wUZjnOv7t0g-unsplash.webp   575w,
                                     ./assets/images/slider/767/ryoji-iwata-wUZjnOv7t0g-unsplash.webp   767w,
                                     ./assets/images/slider/991/ryoji-iwata-wUZjnOv7t0g-unsplash.webp   991w,
+                                    ./assets/images/slider/1024/ryoji-iwata-wUZjnOv7t0g-unsplash.webp 1024w,
                                     ./assets/images/slider/1200/ryoji-iwata-wUZjnOv7t0g-unsplash.webp 1200w,
                                     ./assets/images/slider/1440/ryoji-iwata-wUZjnOv7t0g-unsplash.webp 1440w,
                                     ./assets/images/slider/1920/ryoji-iwata-wUZjnOv7t0g-unsplash.webp 1920w
@@ -146,6 +147,7 @@
                                     ./assets/images/slider/575/nicholas-green-nPz8akkUmDI-unsplash.webp   575w,
                                     ./assets/images/slider/767/nicholas-green-nPz8akkUmDI-unsplash.webp   767w,
                                     ./assets/images/slider/991/nicholas-green-nPz8akkUmDI-unsplash.webp   991w,
+                                    ./assets/images/slider/1024/nicholas-green-nPz8akkUmDI-unsplash.webp 1024w,
                                     ./assets/images/slider/1200/nicholas-green-nPz8akkUmDI-unsplash.webp 1200w,
                                     ./assets/images/slider/1440/nicholas-green-nPz8akkUmDI-unsplash.webp 1440w,
                                     ./assets/images/slider/1920/nicholas-green-nPz8akkUmDI-unsplash.webp 1920w
@@ -167,6 +169,7 @@
                                     ./assets/images/slider/575/edward-cisneros-3_h6-1NPDGw-unsplash.webp   575w,
                                     ./assets/images/slider/767/edward-cisneros-3_h6-1NPDGw-unsplash.webp   767w,
                                     ./assets/images/slider/991/edward-cisneros-3_h6-1NPDGw-unsplash.webp   991w,
+                                    ./assets/images/slider/1024/edward-cisneros-3_h6-1NPDGw-unsplash.webp 1024w,
                                     ./assets/images/slider/1200/edward-cisneros-3_h6-1NPDGw-unsplash.webp 1200w,
                                     ./assets/images/slider/1440/edward-cisneros-3_h6-1NPDGw-unsplash.webp 1440w,
                                     ./assets/images/slider/1920/edward-cisneros-3_h6-1NPDGw-unsplash.webp 1920w
