compression photo gallery

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <main>
             <div id="about">
                 <div class="picture left">
-                    <img src="./assets/images/nina.webp" alt="Photo de Nina Carducci" />
+                    <img src="./assets/images/nina-min.webp" alt="Photo de Nina Carducci" />
                 </div>
                 <div id="about-me">
                     <h2 class="about-me__title">A propos de moi</h2>
@@ -235,41 +235,41 @@
                         <img
                             data-gallery-tag="Concert"
                             class="gallery-item"
-                            src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash1.webp"
+                            src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash1-min.webp"
                             alt="Photo de concert - Aaron Paul"
                             loading="lazy"
                         />
                         <img
                             data-gallery-tag="Entreprises"
                             class="gallery-item"
-                            src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash1.webp"
+                            src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash1-min.webp"
                             alt="Photo d'entreprise - Ali Morshedlou"
                             loading="lazy"
                         />
                         <img
                             data-gallery-tag="Entreprises"
                             class="gallery-item"
-                            src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash1.webp"
+                            src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash1-min.webp"
                             alt="Photo d'entreprise - Jason Goodman"
                             loading="lazy"
                         />
                         <img
                             data-gallery-tag="Mariages"
                             class="gallery-item"
-                            src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash1.webp"
+                            src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash1-min.webp"
                             alt="Photo de mariage - Hannah Busing"
                         />
                         <img
                             data-gallery-tag="Portrait"
                             class="gallery-item"
-                            src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash1.webp"
+                            src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash1-min.webp"
                             alt="Photo portrait - Ade Tunji"
                             loading="lazy"
                         />
                         <img
                             data-gallery-tag="Mariages"
                             class="gallery-item"
-                            src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash1.webp"
+                            src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash1-min.webp"
                             alt="Photo de mariage - Jakob Owens"
                             loading="lazy"
                         />
@@ -385,19 +385,23 @@
                         </form>
                     </div>
                     <div class="picture right">
-                        <img src="./assets/images/camera.webp" alt="Photo d'un appareil photo" />
+                        <img
+                            src="./assets/images/camera-min.webp"
+                            alt="Photo d'un appareil photo"
+                        />
                     </div>
                 </div>
             </div>
         </footer>
 
-        <script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
+        <script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
         <script
             src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
             crossorigin="anonymous"
+            defer
         ></script>
-        <script src="./assets/maugallery.js"></script>
-        <script src="./assets/scripts.min.js"></script>
+        <script src="./assets/maugallery.js" defer></script>
+        <script src="./assets/scripts.min.js" defer></script>
     </body>
 </html>
