--- a/index.html
+++ b/index.html
@@ -30,10 +30,17 @@
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
+        <!-- <link
             href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
             rel="stylesheet"
+        /> -->
+        <link
+            rel="preload"
+            href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral&display=swap"
+            as="style"
+            onload="this.rel='stylesheet'"
         />
+
         <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
         <link rel="stylesheet" href="./assets/style.min.css" />
 
