--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
                                        (max-width: 1200px) 1200px,
                                        (max-width: 1440px) 1440px,
                                        1920px"
+                                loading="lazy"
                             />
                         </div>
                         <div class="carousel-item">
@@ -187,6 +188,7 @@
                                        (max-width: 1200px) 1200px,
                                        (max-width: 1440px) 1440px,
                                        1920px"
+                                loading="lazy"
                             />
                         </div>
                     </div>
