--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
 
         <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
         <link rel="stylesheet" href="./assets/style.min.css" />
+        <link
+            rel="preload"
+            as="image"
+            href="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_1-min.webp"
+        />
 
         <!-- BALISE SCRIPT -->
 
