--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 
         <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
         <link rel="stylesheet" href="./assets/style.min.css" />
-        <link
+        <!-- <link
             rel="preload"
             as="image"
             href="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_1-min.webp"
-        />
+        /> -->
 
         <!-- BALISE SCRIPT -->
 
@@ -131,7 +131,6 @@
                         <div class="carousel-item active">
                             <img
                                 src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_1-min.webp"
-                                class="d-block w-100"
                                 alt="..."
                                 srcset="
                                     ./assets/images/slider/575/ryoji-iwata-wUZjnOv7t0g-unsplash.webp   575w,
@@ -153,7 +152,6 @@
                         <div class="carousel-item">
                             <img
                                 src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_1-min.webp"
-                                class="d-block w-100"
                                 alt="..."
                                 srcset="
                                     ./assets/images/slider/575/nicholas-green-nPz8akkUmDI-unsplash.webp   575w,
@@ -176,7 +174,6 @@
                         <div class="carousel-item">
                             <img
                                 src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_1-min.webp"
-                                class="d-block w-100"
                                 alt="..."
                                 srcset="
                                     ./assets/images/slider/575/edward-cisneros-3_h6-1NPDGw-unsplash.webp   575w,
