--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
                                 ><img
                                     src="assets/images/instagram.png"
                                     alt="Instagram de Nina Carducci"
+                                    width="100%"
+                                    height="100%"
                             /></a>
                         </li>
                     </ul>
@@ -147,6 +149,8 @@
                                        (max-width: 1200px) 1200px,
                                        (max-width: 1440px) 1440px,
                                        1920px"
+                                width="100%"
+                                height="100%"
                             />
                         </div>
                         <div class="carousel-item">
@@ -169,6 +173,8 @@
                                        (max-width: 1440px) 1440px,
                                        1920px"
                                 loading="lazy"
+                                width="100%"
+                                height="100%"
                             />
                         </div>
                         <div class="carousel-item">
@@ -191,6 +197,8 @@
                                        (max-width: 1440px) 1440px,
                                        1920px"
                                 loading="lazy"
+                                width="100%"
+                                height="100%"
                             />
                         </div>
                     </div>
