--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                                 ><img
                                     src="assets/images/instagram.png"
                                     alt="Instagram de Nina Carducci"
+                                    height="22"
                             /></a>
                         </li>
                     </ul>
@@ -224,7 +225,11 @@
         <main>
             <div id="about">
                 <div class="picture left">
-                    <img src="./assets/images/nina-min.webp" alt="Photo de Nina Carducci" />
+                    <img
+                        src="./assets/images/nina-min.webp"
+                        alt="Photo de Nina Carducci"
+                        height="100%"
+                    />
                 </div>
                 <div id="about-me">
                     <h2 class="about-me__title">A propos de moi</h2>
@@ -405,6 +410,7 @@
                         <img
                             src="./assets/images/camera-min.webp"
                             alt="Photo d'un appareil photo"
+                            height="417"
                         />
                     </div>
                 </div>
