Changement fichier css

--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
                                 ><img
                                     src="assets/images/instagram.png"
                                     alt="Instagram de Nina Carducci"
+                                    width="100%"
+                                    heigth="100%"
                             /></a>
                         </li>
                     </ul>
