--- a/index.html
+++ b/index.html
@@ -30,10 +30,6 @@
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <!-- <link
-            href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-            rel="stylesheet"
-        /> -->
         <link
             rel="preload"
             href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral&display=swap"
@@ -43,20 +39,15 @@
 
         <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
         <link rel="stylesheet" href="./assets/style.min.css" />
-        <!-- <link
-            rel="preload"
-            as="image"
-            href="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_1-min.webp"
-        /> -->
 
-        <!-- BALISE SCRIPT -->
+        <!-- BALISE METADONNEES -->
 
         <script type="application/ld+json">
             {
                 "@context": "https://schema.org",
                 "@type": "ProfessionalService",
                 "name": "Nina Carducci",
-                "image": "./assets/images/nina-min.webp",
+                "image": "https://pierre-alexandre-10.github.io/Nina-Carducci/assets/images/nina-min.webp",
                 "@id": "",
                 "url": "https://pierre-alexandre-10.github.io/Nina-Carducci/",
                 "telephone": "0556677889",
@@ -78,7 +69,7 @@
             }
         </script>
 
-        <title>Nina Carducci</title>
+        <title>Nina Carducci - Photographe à Bordeaux</title>
     </head>
     <body>
         <header>
@@ -133,7 +124,7 @@
                         <div class="carousel-item active">
                             <img
                                 src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_1-min.webp"
-                                alt="..."
+                                alt="Homme qui marche dans la rue"
                                 srcset="
                                     ./assets/images/slider/575/ryoji-iwata-wUZjnOv7t0g-unsplash.webp   575w,
                                     ./assets/images/slider/767/ryoji-iwata-wUZjnOv7t0g-unsplash.webp   767w,
@@ -156,7 +147,7 @@
                         <div class="carousel-item">
                             <img
                                 src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_1-min.webp"
-                                alt="..."
+                                alt="Plusieurs perosnnes lors d'un concert"
                                 srcset="
                                     ./assets/images/slider/575/nicholas-green-nPz8akkUmDI-unsplash.webp   575w,
                                     ./assets/images/slider/767/nicholas-green-nPz8akkUmDI-unsplash.webp   767w,
@@ -180,7 +171,7 @@
                         <div class="carousel-item">
                             <img
                                 src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash_1-min.webp"
-                                alt="..."
+                                alt="Couple lors de leur mariages"
                                 srcset="
                                     ./assets/images/slider/575/edward-cisneros-3_h6-1NPDGw-unsplash.webp   575w,
                                     ./assets/images/slider/767/edward-cisneros-3_h6-1NPDGw-unsplash.webp   767w,
@@ -251,7 +242,7 @@
                     </p>
                 </div>
             </div>
-            <div id="gallery">
+            <section id="gallery">
                 <h2 class="title">Portfolio</h2>
                 <div class="container py-3">
                     <div class="gallery" style="display: none">
@@ -332,8 +323,8 @@
                         <figcaption class="quote__author">- Richard Avedon</figcaption>
                     </figure>
                 </div>
-            </div>
-            <div id="services">
+            </section>
+            <section id="services">
                 <h2 class="title">Mes services</h2>
                 <div class="container">
                     <div class="service">
@@ -377,7 +368,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
             <div class="quote">
                 <figure>
                     <blockquote>
@@ -392,7 +383,7 @@
             </div>
         </main>
         <footer>
-            <div id="contact">
+            <section id="contact">
                 <div class="container">
                     <div class="form-container">
                         <h2>Une question ? Une demande de devis ?</h2>
@@ -414,8 +405,10 @@
                         />
                     </div>
                 </div>
-            </div>
+            </section>
         </footer>
+
+        <!-- BALISE SCRIPT -->
 
         <script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
         <script
@@ -424,7 +417,7 @@
             crossorigin="anonymous"
             defer
         ></script>
-        <script src="./assets/maugallery.js" defer></script>
+        <script src="./assets/maugallery.min.js" defer></script>
         <script src="./assets/scripts.min.js" defer></script>
     </body>
 </html>
