--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
         <link rel="stylesheet" href="./assets/style.min.css" />
 
-        <!-- BALISE METADONNEES -->
+        <!-- BALISE GOOGLE RICH SNIPPETS -->
 
         <script type="application/ld+json">
             {
@@ -89,8 +89,6 @@
                                 ><img
                                     src="assets/images/instagram.png"
                                     alt="Instagram de Nina Carducci"
-                                    width="100%"
-                                    heigth="100%"
                             /></a>
                         </li>
                     </ul>
