--- a/index.html
+++ b/index.html
@@ -209,11 +209,7 @@
         <main>
             <div id="about">
                 <div class="picture left">
-                    <img
-                        src="./assets/images/nina-min.webp"
-                        alt="Photo de Nina Carducci"
-                        height="100%"
-                    />
+                    <img src="./assets/images/nina-min.webp" alt="Photo de Nina Carducci" />
                 </div>
                 <div id="about-me">
                     <h2 class="about-me__title">A propos de moi</h2>
