Loading lazy sur les photos

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
                                        (max-width: 1200px) 1200px,
                                        (max-width: 1440px) 1440px,
                                        1920px"
+                                loading="lazy"
                             />
                         </div>
                         <div class="carousel-item">
@@ -390,6 +391,7 @@
                         <img
                             src="./assets/images/camera-min.webp"
                             alt="Photo d'un appareil photo"
+                            loading="lazy"
                         />
                     </div>
                 </div>
